Trying to add semantic HTML support using Compass Bootstrap.

--- a/app/index.html
+++ b/app/index.html
@@ -6,8 +6,8 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title></title>
-        <meta name="description" content="">
+        <title>Translatewiki.net – free &amp; open-source software translation wiki</title>
+        <meta name="description" content="Translatewiki.net is a localisation platform for translation communities, language communities, and free and open source projects.">
         <meta name="viewport" content="width=device-width">
 
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
@@ -18,12 +18,84 @@
     </head>
     <body>
 
-
     <!--[if lt IE 7]>
         <p class="chromeframe">You are using an outdated browser. <a href="http://browsehappy.com/">Upgrade your browser today</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome Frame</a> to better experience this site.</p>
     <![endif]-->
 
-    <!-- Add your site or application content here -->
+    <div class="container-fluid">
+        <header>
+            <div class="brand">
+                <h1>TranslateWiki</h1>
+            </div>
+
+            <div class="actions">
+                <a href="">Select language</a>
+                <a href="">Login</a>
+            </div>
+        </header>
+
+        <section class="find-language"></section>
+
+        <section class="info-banner">
+            <div class="metrics">
+                <div class="info-box metric">
+                    <span class="title">Projects</span>
+                    <span class="value">22</span>
+                </div>
+                <div class="info-box metric">
+                    <span class="title">Translators</span>
+                    <span class="value">15</span>
+                </div>
+                <div class="info-box metric">
+                    <span class="title">Completed Projects</span>
+                    <span class="value">13</span>
+                </div>
+                <div class="info-box metric">
+                    <span class="title">Completion</span>
+                    <span class="value">67%</span>
+                </div>
+                <div class="info-box picture"></div>
+                <div class="info-box picture"></div>
+                <div class="info-box picture"></div>
+                <div class="info-box picture"></div>
+            </div>
+
+            <aside class="register">
+                <h3>Register</h3>
+            </aside>
+        </section>
+
+
+
+        <section class="getting-started">
+            <h3>Getting started</h3>
+            <div class="process-flow"></div>
+            <div class="description">
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+                    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                </p>
+
+                <a href="" class="btn btn-large btn-primary">Start Translating!</a>
+                <a href="" class="btn btn-large btn-primary">Start Proof-reading!</a>
+            </div>
+
+        </section>
+
+        <section class="projects">
+            <h3>Projects using TranslateWiki</h3>
+        </section>
+
+        <footer>
+            <p class="item"><small>Privacy policy</small></p>
+            <p class="item"><small>About translatewiki.net</small></p>
+            <p class="item"><small>Disclaimers</small></p>
+        </footer>
+    </div>
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="scripts/vendor/jquery.min.js"><\/script>')</script>
