Added header navbar.

--- a/app/index.html
+++ b/app/index.html
@@ -22,17 +22,25 @@
         <p class="chromeframe">You are using an outdated browser. <a href="http://browsehappy.com/">Upgrade your browser today</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome Frame</a> to better experience this site.</p>
     <![endif]-->
 
-    <div class="container-fluid">
-        <header>
-            <div class="brand">
-                <h1>TranslateWiki</h1>
-            </div>
+        <header class="navbar">
+            <div class="container">
+                <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </a>
+                <a class="brand" href="/"><img src="images/branding/logo.png" alt="TranslateWiki"></a>
 
-            <div class="actions">
-                <a href="">Select language</a>
-                <a href="">Login</a>
+                <nav class="nav-collapse pull-right">
+                    <ul class="nav">
+                        <li><a href="#"><i class="icon-globe"></i> Language</a></li>
+                        <li><a href="#"><i class="icon-key"></i> Login</a></li>
+                    </ul>
+                </nav>
             </div>
         </header>
+
+    <div class="main container">
 
         <section class="find-language"></section>
 
