Abandoning as semantic HTML with compass makeColumn() mixins is just not working. :(

--- a/app/index.html
+++ b/app/index.html
@@ -42,7 +42,7 @@
 
     <div class="main container">
 
-        <section class="find-language"></section>
+        <section class="find-language">Find languages</section>
 
         <section class="info-banner">
             <div class="metrics">
@@ -75,7 +75,7 @@
 
 
 
-        <section class="getting-started">
+        <section class="getting-started row-fluid">
             <h3>Getting started</h3>
             <div class="process-flow"></div>
             <div class="description">
@@ -96,6 +96,34 @@
 
         <section class="projects">
             <h3>Projects using TranslateWiki</h3>
+            <ul>
+                <li class="project">Project</li>
+                <li class="project">Project</li>
+                <li class="project">Project</li>
+                <li class="project">Project</li>
+                <li class="project">Project</li>
+                <li class="project">Project</li>
+                <li class="project">Project</li>
+                <li class="project">Project</li>
+                <li class="project">Project</li>
+                <li class="project">Project</li>
+                <li class="project">Project</li>
+                <li class="project">Project</li>
+            </ul>
+            <ul>
+                <li class="project">Project</li>
+                <li class="project">Project</li>
+                <li class="project">Project</li>
+                <li class="project">Project</li>
+                <li class="project">Project</li>
+                <li class="project">Project</li>
+                <li class="project">Project</li>
+                <li class="project">Project</li>
+                <li class="project">Project</li>
+                <li class="project">Project</li>
+                <li class="project">Project</li>
+                <li class="project">Project</li>
+            </ul>
         </section>
 
         <footer>
